# header_and_stub_library

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build-cmake.sh  build-meson.sh  check.sh  clean.sh  meson.build  mpi-api-deprecated.h  mpi-api-removed.h  mpi.h  mpi_f08.F90  mpi_fortran_callback_prototypes.F90  mpi_fortran_callbacks_decl.F90  mpi_fortran_callbacks_impl.F90  mpi_fortran_constants.F90  mpi_fortran_constants_link.F90  mpi_fortran_functions_decl.F90  mpi_fortran_functions_impl.F90  mpi_fortran_handle_types.F90  mpi_fortran_integer_types.F90  mpi_fortran_status.F90  mpi_fortran_status_type.F90  mpicc.in  mpistubs.c
.github/workflows/: ci.yml  mpi4py.yml
include/: mpi.h
lib/: Makefile  libmpiabi_stubs.c  mpistubs.c
